--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,7 +1,7 @@
 {
   "name": "TWIKI Helper",
   "version": "1.0",
-  "icons": { "16": "icon16.ico","32": "icon32.ico" },
+  "icons": { "16": "icon16.png","32": "icon32.png" },
   "background": { "scripts": ["background.js"] },
   "permissions": [
     "tabs","http://*/*"
@@ -9,11 +9,11 @@
   "page_action": {
     "default_title": "TWIKI Helper",
     "default_popup": "popup.html",
-    "default_icon": "icon16.ico"
+    "default_icon": "icon16.png"
   },
   "content_scripts": [
     {
-        "matches": ["http://*/*"],
+        "matches": ["http://twiki.dangdang.com/*"],
         "js": ["jquery-1.7.2.min.js","myscript.js"],
         "css":["basic.css"],
         "exclude_globs": [  ],  
